--- a/public/css/new.css
+++ b/public/css/new.css
@@ -1,20 +1,22 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 input {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none;
-    font-family: "Raleway";
+  align-self: center;
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  font-family: "Raleway";
 }
 
 input:focus {
-    border: 3px solid #555;
+  border: 3px solid #555;
 }
 
 .button {
@@ -22,13 +24,13 @@ input:focus {
   border-radius: 4px;
   background-color: #f4511e;
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   font-size: 25px;
   padding: 20px;
   width: 200px;
-    height: 70px;
-  transition:all 0.5s;
+  height: 70px;
+  transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
 }
@@ -41,7 +43,7 @@ input:focus {
 }
 
 .button span:after {
-  content: '\00bb';
+  content: "\00bb";
   position: absolute;
   opacity: 0;
   top: 0;
@@ -57,97 +59,138 @@ input:focus {
   opacity: 1;
   right: 0;
 }
-p{
-    font-family: 'Raleway';
-    font-size: 20px;
+
+p {
+  font-family: "Raleway";
+  font-size: 20px;
 }
+
+h1, h2, h3, p, span {
+  word-wrap: break-word;
+  word-break: keep-all;
+  box-sizing: content-box;
+}
+
+span {
+  font-family: "cursive";
+}
+
+h3 {
+  font-family: "Raleway";
+}
+
+h2 {
+  font-family: "Merriweather";
+}
+
 body {
-
-    padding: 10px;
-    background-image: url('img\\test.jpg');
-    color: black;
-    background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  background-image: url("img\\test.jpg");
+  color: black;
+  font-family: "Merriweather";
+  background-repeat: repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-
-.header {
-    padding: 30px;
-    color: white;
-    text-align: center;
-     background-image:url('img\\Abstract Orange Red Texture Desktop Wallpaper.jpg');
-     font-family: 'Merriweather';
-   /* background-color: #070606;*/
-    background-attachment: fixed;
-
+.container {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  grid-template-rows: minmax(1fr, 2fr) minmax(1fr, 1fr) minmax(3fr, 6fr) minmax(1fr,  1fr);
+  grid-template-areas:
+    "header header"
+    "topnav topnav"
+    "leftColumn sticky"
+    "footer footer";
+  align-items: start;
+  justify-items: stretch;
 }
 
-.header h1 {
-    font-size: 50px;
-    font-family: 'Merriweather';
+img {
+  align-self: center;
+}
 
+header {
+  grid-area: header;
+  padding: 30px;
+  color: white;
+  background-image: url("img\\Abstract Orange Red Texture Desktop Wallpaper.jpg");
+  font-family: "Merriweather";
+  background-repeat: repeat;
+  background-size: cover;
 }
-.header h2{
-    font-family: 'Merriweather';
-    font-size: 30px;
+
+header > h1 {
+  color: whitesmoke;
+  font-size: 50px;
+  word-wrap: normal;
+  word-break: break-all;
+  font-family: "Merriweather";
 }
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+
+header > h2 {
+  color: whitesmoke;
+  word-wrap: break-word;
+  word-break: break-all;
+  font-family: "Merriweather";
+  font-size: 30px;
 }
-/* Style the top navigation bar */
+
+header > p {
+  color: whitesmoke;
+  word-wrap: break-word;
+  word-break: break-all;
+  font-family: "Merriweather";
+  font-size: 20px;
+}
+
+.visible-sm {
+  display: none;
+}
+
+.dropdown-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;  
+  align-content: center;
+}
+
 .topnav {
-    width: 100%;
-    overflow: hidden;
-    background-color: #070606;
-    font-family: 'Raleway', arial;
-     position: -webkit-sticky;
+  grid-area: topnav; 
+  background-color: #070606;
+  font-family: "Raleway", arial;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-
+  z-index: 100;
 }
 
 /* Style the topnav links */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-     position: -webkit-sticky;
+.topnav a { 
+  display: block;
+  cursor: pointer;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-
 }
 
 /* Change color on hover */
 .topnav a:hover {
-    background-color:  rgb(128,0,42);
-    color: white;
-    font-family: "Raleway";
+  background-color: rgb(128, 0, 42);
+  color: white;
+  font-family: "Raleway";
 }
 
 /* The dropdown container */
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
 
 /* Add a red background color to navbar links on hover*/
-.navbar a:hover, .dropdown:hover .dropbtn {
+.navbar a:hover,
+.dropdown:hover .dropbtn {
   background-color: orangered;
 }
 
@@ -155,10 +198,9 @@ body {
 .dropdown-content {
   display: none;
   position: fixed;
-
   background-color: white;
   min-width: 166.5px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -184,140 +226,135 @@ body {
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
-.leftcolumn {
-    float: left;
-    width: 75%;
+.leftColumn {
+  grid-area: leftColumn;
+}
+
+.leftColumn > .card {
+  padding: 50px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.leftColumn > .card > p {
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 /* Right column */
-div.sticky {
-    float: right;
-    width: 25%;
-   object-position: right;
-     position: -webkit-sticky;
-    position: sticky;
-    top: 5%;
-    height: 50%;
-
-    padding-left: 20px;
+.sticky {
+  grid-area: sticky;
+  align-items: start; 
+  position: sticky;
+  box-sizing: border-box;
+  height: 100vh;
+  right: 0;
+  top: 0;
+  display: flex;  
+  padding: 20px;
 }
+
+.sticky > .card {
+    padding: 50px;
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
 #myBtn {
+  display:inline-block;
+  vertical-align:middle;
   position: fixed;
-  bottom: 20px;
-  right: 30px;
+  top: 85vh;  
+  right: 30vw;
   z-index: 99;
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: red;
+  background-color: #f44336;
   color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
-margin-right: 350px;
+  overflow: hidden;
 }
+
 #myBtn:hover {
-  background-color: #555;
+  background-color: #ccc;
 }
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    align-content: center;
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  align-content: center;
 }
 
 /* Modal Content */
 .modal-content {
-    background-color: rgb(234, 221, 221);
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    border-radius: 10px;
-    width: 50%;
-    height: 40%;
-
+  background-color: rgb(234, 221, 221);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 50%;
+  height: 40%;
 }
 
 /* The Close Button */
 .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-/* Add a card effect for articles */
-.card {
-
-
-    padding: 50px;
-    margin-top: 20px;
-    background-color:  rgba(255,255,255,0.4);
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Footer */
-.footer {
-    padding: 20px;
-    text-align: center;
-    background: #381c1c;
-    margin-top: 20px;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media (max-width: 800px) {
-    .leftcolumn, .rightcolumn, {
-        width: 100%;
-        padding: 0;
-    }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media (max-width: 400px) {
-    .topnav a {
-        float: none;
-        width: 100%;
-    }
-}
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
+  color: #000;
   text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
+  cursor: pointer;
 }
+
+.link {
+  padding: 14px 16px;
+  color: white;
+  border: none;
+  outline: none;
+  font-size: 20x;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  background-color: inherit;
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+.link:hover .fa {
+  opacity: 0.7;
+  transform: rotateX(180deg);
+}
+
+.fa {
+  padding: 0;
+  padding-left: 10px;
+}
+
 .fa:hover {
-    opacity: 0.7;
+  opacity: 0.7;
+  transform: rotateX(180deg);
 }
 
 .fa-facebook {
-  background: #3B5998;
+  background: #3b5998;
   color: white;
 }
 .fa-twitter {
-  background: #55ACEE;
+  background: #55acee;
   color: white;
 }
 
@@ -325,47 +362,213 @@ margin-right: 350px;
   background: #dd4b39;
   color: white;
 }
+
 .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: rgba(5, 4, 4, 0.84);
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    text-align:center;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(5, 4, 4, 0.84);
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-items: flex-start;
+  align-items: flex-start;
+  transition: 0.5s;
+  padding-top: 60px;
+  text-align: center;
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: white;
-    display: block;
-    transition: 0.3s;
-
-position: -webkit-sticky;
+  flex-flow: 1;
+  text-align: left;
+  text-decoration: none;
+  font-size: 25px;
+  line-height: 25px;
+  width: 100%;
+  color: white;
+  display: block;
+  transition: 0.3s;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-
 }
 
-.sidenav a:hover{
-    color: #f1f1f1;
-    font-size: 30px;
+.sidenav a:hover {
+  color: #f1f1f1;
+  font-size: 28px;
+  line-height: 28px;
 }
 
 .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    font-size: 36px;
-    margin-left: 50px;
+  text-align: right;
+  font-size: 36px;
 }
+
+footer {
+  grid-area: footer;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  flex-wrap: wrap;
+  align-content: center;
+  padding: 50px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+footer h2 {
+  width: 100%;
+  align-self: flex-start; 
+}
+
+footer > form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .container {
+    grid-template-areas:
+      "header header"
+      "topnav topnav"
+      "leftColumn leftColumn"
+      "sticky sticky"
+      "footer footer";
+    align-items: start;
+    justify-items: stretch;
+  }
+
+  .leftColumn > .card {
+    padding: 5px;
+    margin-top: 5px;
+  }
+
+  .sticky {
+    grid-area: sticky;
+    justify-items: stretch;
+    align-self: center;
+    padding-left: 0;
+    position: relative;
+    z-index: 0;
+  } 
+
+  .dropdown-nav {
+    flex-direction: column;
+  }
+  
+  .topnav {
+    position: relative;
+  }
+
+  footer {
+    grid-area: footer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+  }
+  
+  footer > form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  input {
+    width: 100%;
+  }
+
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media all and (min-width: 401px) and (max-width: 800px) {
+  .container {
+    grid-template-areas:
+      "header header"
+      "topnav topnav"
+      "leftColumn leftColumn"
+      "sticky sticky"
+      "footer footer";
+    align-items: start;
+    justify-items: stretch;
+  }
+
+  .sticky {
+    padding-left: 0;
+    padding-right: 0;
+    position: relative;
+    height: auto;
+    grid-area: sticky;
+    z-index: 0;
+  }
+
+  .sticky > .card {
+    justify-self: stretch;
+    align-self: stretch;
+    width: 100vw;
+    margin-top: 0;
+  }
+
+  .leftColumn > .card {
+    padding: 50px;
+    margin-top: 20px;
+  }
+
+  footer {
+    grid-area: footer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    margin-top: 0;
+  }
+
+  input {
+    width: 100%;
+  }
+  
+  footer > form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  #myBtn {
+    top: 90vh;  
+    right: 5vw;
+  }
+
+}
+
+.middle-content {
+  display: flex; 
+  flex-direction: column; 
+  vertical-align: middle;
+  text-align: justify; 
+  align-content: center;
 }
